# norat-api-server

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  api_list.md  common.json  docker-compose.yaml  generate_admin_env_file.py  generate_env_file.py  generate_main_env_file.py  lambda_admin_api_function.py  lambda_api_function.py  pyproject.toml
.github/workflows/: dev.yaml  prod.yaml
application/: config.py  config_scheme.py  error.py  local.py  main.py  setup.py
application/domain/admin/use_case/: use_case.py
application/domain/user/model/: vo.py  (+5 more)
application/infra/fastapi/: __init__.py  auth.py
application/infra/rdb/: __init__.py
application/infra/sms/: __init__.py  cool_sms.py  fake_sms.py
application/infra/unit_of_work/: sqlalchemy.py
application/jwt/: __init__.py  token_manager.py  token_type.py
common/: config.py  config_scheme.py
migration/: env.py
migration/versions/: 0001_create_auth_phone_table.py  0002_create_user_table.py  0003_create_user_authenticator_by_password.py  0004_add_phone_field_to_user_table.py  0005_create_certification_table.py  0006_add_phone_index_to_user_table.py  0007_add_verified_at_field_to_user_table.py  0008_add_terms_fields_to_user_table.py  0009_create_face_verification_request_table.py  0010_create_schoolstudent_table.py  0011_create_schoolmembercount_table.py  0012_create_queue_item_table.py  0013_create_public_post_table.py
run/admin/: auth.py  config.py  config_scheme.py  fastapi.py  local.py  real.py  setup.py
run/main/: auth.py  config_scheme.py  fastapi.py  local.py  real.py  setup.py
(+64 files in other folders)
